--- a/bouwen/gallery/index.html
+++ b/bouwen/gallery/index.html
@@ -72,7 +72,7 @@
 
     <!-- Gallery Section -->
     <div id="gallery" class="gallery-section">
-        <h2 class="gallery-heading">Gallery</h2>
+        <!-- <h2 class="gallery-heading">Gallery</h2> -->
         <div class="gallery-grid" id="galleryGrid">
             <!-- Images will be inserted here by JavaScript -->
         </div>
@@ -90,28 +90,27 @@
 
     <script>
         const images = [
-            'logo-large.svg',
-            'images/1.jpeg',
-            'images/2.jpeg',
-            'images/21.jpeg',
-            'images/3.jpeg',
-            'images/4.jpeg',
-            'images/5.jpeg',
-            'images/6.jpeg',
-            'images/7.jpeg',
-            'images/8.jpeg',
-            'images/9.jpeg',
-            'images/10.jpeg',
-            'images/11.jpeg',
-            'images/12.jpeg',
-            'images/13.jpeg',
-            'images/14.jpeg',
-            'images/15.jpeg',
-            'images/16.jpeg',
-            'images/17.jpeg',
-            'images/18.jpeg',
-            'images/19.jpeg',
-            'images/20.jpeg',
+            '../images/1.jpeg',
+            '../images/2.jpeg',
+            '../images/21.jpeg',
+            '../images/3.jpeg',
+            '../images/4.jpeg',
+            '../images/5.jpeg',
+            '../images/6.jpeg',
+            '../images/7.jpeg',
+            '../images/8.jpeg',
+            '../images/9.jpeg',
+            '../images/10.jpeg',
+            '../images/11.jpeg',
+            '../images/12.jpeg',
+            '../images/13.jpeg',
+            '../images/14.jpeg',
+            '../images/15.jpeg',
+            '../images/16.jpeg',
+            '../images/17.jpeg',
+            '../images/18.jpeg',
+            '../images/19.jpeg',
+            '../images/20.jpeg',
         ];
     
         // Image rotation for hero section
