--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -92,6 +92,7 @@
             <div class="cf-turnstile"
                 data-sitekey="0x4AAAAAABvJRWjYdyGLUMm_"
                 data-callback="onSuccess"
+                data-theme="auto"
                 id="contact"
                 >
             </div>
