--- a/bouwen/gallery/index.html
+++ b/bouwen/gallery/index.html
@@ -108,6 +108,21 @@
             '../images/18.jpeg',
             '../images/19.jpeg',
             '../images/20.jpeg',
+            '../images/21.jpeg',
+            '../images/22.jpeg',
+            '../images/23.jpeg',
+            '../images/24.jpeg',
+            '../images/25.jpeg',
+            '../images/26.jpeg',
+            '../images/27.jpeg',
+            '../images/28.jpeg',
+            '../images/29.jpeg',
+            '../images/30.jpeg',
+            '../images/31.jpeg',
+            '../images/32.jpeg',
+            '../images/33.jpeg',
+            '../images/34.jpeg',
+            '../images/35.jpeg',
         ];
     
         // Gallery generation
@@ -176,7 +191,7 @@
             if (e.key === 'ArrowLeft') showPrevImage();
             if (e.key === 'ArrowRight') showNextImage();
         });
-    </script>  <!-- ✅ THIS WAS MISSING -->
+    </script>
 
     <!-- Navbar -->
     <script>
