--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -86,9 +86,10 @@
         <br>
         <br>
         <div class="contact">
+            <!-- <img src="face-round.svg" alt="Daan Douwe Contact" class="contact-icon"> -->
             <object data="face-round.svg" type="image/svg+xml" class="contact-icon">
                 <img src="face-round.svg" alt="Daan Douwe Contact">
-              </object>
+            </object>
             <br>
             <!-- Turnstile widget -->
             <div class="cf-turnstile"
