--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -88,7 +88,7 @@
         <div class="contact">
             <!-- <img src="face-round.svg" alt="Daan Douwe Contact" class="contact-icon"> -->
             <object data="face-round.svg" type="image/svg+xml" class="contact-icon">
-                <img src="face-round.svg" alt="Daan Douwe Contact">
+                <img src="face-round.svg" alt="Daan Douwe Contact" class="contact-icon">
             </object>
             <br>
             <!-- Turnstile widget -->
