Add shadows behind round icons

--- a/bouwen/gallery/index.html
+++ b/bouwen/gallery/index.html
@@ -127,7 +127,7 @@
     
         // Gallery generation
         const galleryGrid = document.getElementById('galleryGrid');
-        
+        // een verhaaltje
         // Skip the logo and create gallery items
         images.slice(1).forEach((imageSrc, index) => {
             const galleryItem = document.createElement('div');
