Custom arrow for gallery

--- a/bouwen/gallery/index.html
+++ b/bouwen/gallery/index.html
@@ -80,8 +80,8 @@
         <span class="lightbox-close" id="lightboxClose">&times;</span>
         <img class="lightbox-content" id="lightboxImage">
         <div class="lightbox-nav">
-            <button class="lightbox-prev" id="lightboxPrev">&#10094;</button>
-            <button class="lightbox-next" id="lightboxNext">&#10095;</button>
+            <button class="lightbox-prev" id="lightboxPrev"><img src="drill-round.svg" alt="Previous"></button>
+            <button class="lightbox-next" id="lightboxNext"><img src="drill-round.svg" alt="Next"></button>
         </div>
     </div>
 
@@ -123,6 +123,7 @@
             '../images/33.jpeg',
             '../images/34.jpeg',
             '../images/35.jpeg',
+            '../images/36.jpeg',
         ];
     
         // Gallery generation
