changes on mobile

--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -70,21 +70,16 @@
         </div>
     </nav>
 
-    <div class="signature">
-        <div class="logo-col">
-          <img id="rotatingImage" src="" alt="Daan Douwe Bouwen" class="logo">
+    <div class="home">
+        <div class="logo">
+          <img id="rotatingImage" src="" alt="Daan Douwe Bouwen" class="image-carousel">
         </div>
 
-        <div class="content-cell">
+        <div class="logo-title">
           <div class="company">Daan Douwe Bouwen</div>
           <div class="profession">Timmerman & Aannemer</div>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+
         <div class="contact">
             <img src="face-round.svg" alt="Daan Douwe Contact" class="contact-icon">
             <br>
@@ -102,6 +97,8 @@
                 <div>KvK: 97741256</div>
             </div>
         </div>
+        <br>
+        <br>
         <br>
         <br>
         <br>
