--- a/bouwen/gallery/index.html
+++ b/bouwen/gallery/index.html
@@ -64,7 +64,7 @@
             </button>
             <div class="dropdown-content" id="dropdownContent">
                 <a href="../">Home</a>
-                <a href="../gallery/">Gallery</a>
+                <a href="../gallery/" class="active">Gallery</a>
                 <a href="../#contact">Contact</a>
             </div>
         </div>
