Fix blurry svg arrow in gallery

--- a/bouwen/gallery/index.html
+++ b/bouwen/gallery/index.html
@@ -80,7 +80,7 @@
         <span class="lightbox-close" id="lightboxClose">&times;</span>
         <img class="lightbox-content" id="lightboxImage">
         <div class="lightbox-nav">
-            <button class="lightbox-prev" id="lightboxPrev"><img src="../drill-round.svg" alt="Previous"></button>
+            <button class="lightbox-prev css-arrow" id="lightboxPrev"><img src="../drill-round.svg" alt="Previous"></button>
             <button class="lightbox-next" id="lightboxNext"><img src="../drill-round.svg" alt="Next"></button>
         </div>
     </div>
