--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -56,6 +56,11 @@
     </script>
 </head>
 <body>
+    <!-- Top Left Logo -->
+    <a href="../" class="top-logo">
+        <img src="logo-dd.svg" alt="Daan Douwe Logo">
+    </a>
+    
     <!-- Fixed Navbar -->
     <nav class="navbar">
         <div class="dropdown">
