Add DD to gallery

--- a/bouwen/gallery/index.html
+++ b/bouwen/gallery/index.html
@@ -56,6 +56,12 @@
 </head>
 
 <body>
+
+    <!-- Top Left Logo -->
+    <a href="../../" class="top-logo">
+        <img src="logo-dd.svg" alt="Daan Douwe Logo">
+    </a>
+    
     <!-- Navbar -->
     <nav class="navbar">
         <div class="dropdown">
