Add social links

--- a/bouwen/gallery/index.html
+++ b/bouwen/gallery/index.html
@@ -91,6 +91,13 @@
         </div>
     </div>
 
+    <!-- Footer with social links -->
+    <footer class="social-footer">
+        <a href="https://www.linkedin.com/in/daan-🔨-van-stigt-713772133/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <span class="footer-separator">•</span>
+        <a href="https://github.com/daandouwe" target="_blank" rel="noopener noreferrer">GitHub</a>
+    </footer>
+    
     <script>
         const images = [
             '../images/1.jpeg',
