--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -119,6 +119,13 @@
         <br>
     </div>
 
+    <!-- Footer with social links -->
+    <footer class="social-footer">
+        <a href="https://www.linkedin.com/in/daan-🔨-van-stigt-713772133/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <span class="footer-separator">•</span>
+        <a href="https://github.com/daandouwe" target="_blank" rel="noopener noreferrer">GitHub</a>
+    </footer>
+
     <!-- JavaScript -->
     <script src="script.js"></script>
 
