--- a/bouwen/gallery/index.html
+++ b/bouwen/gallery/index.html
@@ -59,7 +59,7 @@
 
     <!-- Top Left Logo -->
     <a href="../../" class="top-logo">
-        <img src="logo-dd.svg" alt="Daan Douwe Logo">
+        <img src="../logo-dd.svg" alt="Daan Douwe Logo">
     </a>
     
     <!-- Navbar -->
