--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -104,9 +104,18 @@
                 <div>E: <a href="mailto:bouwen@daandouwe.com">bouwen@daandouwe.com</a></div>
                 <div>KvK: 97741256</div>
             </div>
+
+            <!-- QR Code -->
+            <!-- <div class="qr-code">
+                <img src="qr.svg" alt="QR">
+            </div> -->
+            <div class="qr-code clickable" id="qrcode">
+                <img src="qr.svg" alt="QR">
+            </div>
+            <p class="qr-hint" id="qrHint" style="display:none;">Tap QR to add to Apple Wallet</p>
+    
+
         </div>
-        <br>
-        <br>
         <br>
         <br>
         <br>
