--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -101,18 +101,13 @@
             </div>
             <div class="contact" id="contact-turnstile" style="display: none;">
                 <div>Amsterdam, Nederland</div>
-                <div>E: <a href="mailto:bouwen@daandouwe.com">bouwen@daandouwe.com</a></div>
+                <div>E: <a href="/cdn-cgi/l/email-protection#23414c5654464d634742424d474c5654460d404c4e"><span class="__cf_email__" data-cfemail="1f7d706a687a715f7b7e7e717b706a687a317c7072">[email&#160;protected]</span></a></div>
                 <div>KvK: 97741256</div>
             </div>
 
-            <!-- QR Code -->
-            <!-- <div class="qr-code">
-                <img src="qr.svg" alt="QR">
-            </div> -->
-            <div class="qr-code clickable" id="qrcode">
-                <img src="qr.svg" alt="QR">
-            </div>
-            <p class="qr-hint" id="qrHint" style="display:none;">Tap QR to add to Apple Wallet</p>
+            <!-- QR Code (dynamically generated) -->
+            <div class="qr-code" id="qrcode"></div>
+            <p class="qr-hint" id="qrHint" style="display:none;">Tap to add to wallet</p>
     
 
         </div>
@@ -138,14 +133,3 @@
                 <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path fill="#063B40" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                 </svg>
-            </a>
-        </div>
-        <br>
-        <br>
-    </div>
-
-    <!-- JavaScript -->
-    <script src="script.js"></script>
-
-</body>
-</html>
