--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -104,8 +104,8 @@
             </div>
             <div class="contact" id="contact-turnstile" style="display: none;">
                 <div>Amsterdam, Nederland</div>
-                <!-- <div>E: <a href="mailto:bouwen@daandouwe.com">bouwen@daandouwe.com</a></div> -->
-                <div>E: <a href="/cdn-cgi/l/email-protection#23414c5654464d634742424d474c5654460d404c4e"><span class="__cf_email__" data-cfemail="1f7d706a687a715f7b7e7e717b706a687a317c7072">[email&#160;protected]</span></a></div>
+                <div>E: <a href="mailto:bouwen@daandouwe.com">bouwen@daandouwe.com</a></div>
+                <!-- <div>E: <a href="/cdn-cgi/l/email-protection#23414c5654464d634742424d474c5654460d404c4e"><span class="__cf_email__" data-cfemail="1f7d706a687a715f7b7e7e717b706a687a317c7072">[email&#160;protected]</span></a></div> -->
                 <div>KvK: 97741256</div>
             </div>
 
