--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -109,9 +109,9 @@
                 <div>KvK: 97741256</div>
             </div>
 
-            <!-- QR Code (dynamically generated) -->
-            <div class="qr-code" id="qrcode"></div>
-            <p class="qr-hint" id="qrHint" style="display:none;">Tap to add to wallet</p>
+            QR Code (dynamically generated)
+            <!-- <div class="qr-code" id="qrcode"></div>
+            <p class="qr-hint" id="qrHint" style="display:none;">Tap to add to wallet</p> -->
 
         </div>
         <br>
