Redirect to home

--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
     <!-- Top Left Logo -->
-    <a href="./" class="top-logo">
+    <a href="../" class="top-logo">
         <img src="logo-dd.svg" alt="Daan Douwe Logo">
     </a>
     
